<resources>
    <string name="app_name">Goldsikka</string>
    <string name="Home">Home</string>
    <string name="JEWELSKART">JEWELSKART</string>
    <string name="buynoe">Buy One</string>
    <string name="offerning">Offerings</string>
    <string name="enquire">Enquiry</string>
    <string name="Globalrates">Global Rates</string>
    <string name="telugu">తెలుగు</string>
    <string name="facebook_app_id">277411671215978</string>
    <string name="fb_login_protocol_scheme">fb277411671215978</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="text_scroll">Gold Buy Price of Hyderabad 24 Carts = 58.054/- 10grms ; 22 Carts = 53.239/- 10grms</string>
    <string name="aboutus">WHO WE ARE &amp; WHAT WE DO</string>
    <string name="digital_wallet_conditions">DIGITAL WALLET TERMS &amp; CONDITIONS</string>
    <string name="digital_wallet_terms_condition"> TERMS &amp; CONDITIONS</string>
    <string name="update_message">Your Application need to update</string>
    <string name="update_now">Update Now</string>
    <string name="cancel">Cancel</string>
    <string name="web_url">https://goldsikka.com/api/</string>
    <string name="Rs">\u20B9</string>
    <string name="weak">weak</string>
    <string name="medium">medium</string>
    <string name="strong">strong</string>
    <string name="very_strong">very strong</string>
    <string name="press_again_to_exit">Press again to exit</string>
    <string name="error_no_internet_connection">No internet connection.</string>
    <string name="error_connection_request_failed">Network connection request failed, Try again!</string>
    <string name="error_invalid_data">Server return invalid response, Please contact your administrator.</string>
    <string name="internal_storage">internal_storage</string>
    <string name="Goldsikka_Limited">Goldsikka Limited</string>
    <string name="Please_enter_OTP">Please enter OTP</string>
    <string name="OTP_sent_to">OTP sent to </string>
    <string name="Enter_OTP">Enter OTP </string>
    <string name="Didnt_recieve_the_code">Didn’t recieve the code?</string>
    <string name="Resend"> Resend</string>
    <string name="Verify_and_Proceed">Verify and Proceed</string>
    <string name="Verify_Details">Verify Details </string>
    <string name="Forgot_Password">Forgot Password? </string>
    <string name="Forgot_changePassword">To reset your password enter your new password and confirm password </string>
    <string name="Forgot_Password_Content">Enter the email/mobile associated with your account and we will send an OTP  to reset your password</string>
    <string name="Submit">Submit</string>
    <string name="Change_Password">Change Password</string>
    <string name="Email"><![CDATA[Email<font color=\'#cc0029\'>*</font>]]></string>
    <string name="Phone_Number"><![CDATA[Phone Number <font color=\'#cc0029\'>*</font>]]></string>
    <string name="Current_Password"><![CDATA[Current Password <font color=\'#cc0029\'>*</font>]]></string>
    <string name="New_Password"><![CDATA[New Password <font color=\'#cc0029\'>*</font>]]></string>
    <string name="Confirm_Password"><![CDATA[Confirm Password <font color=\'#cc0029\'>*</font>]]></string>
    <string name="Verify_Your_Account">Verify Your Account</string>
    <string name="Verify_Your_Account_Content">Please enter your phone number below to verify your account </string>
    <string name="About_Gold_Sikka">About Goldsikka</string>
    <string name="FAQ_s">FAQ’s</string>
    <string name="Registration">Registration</string>
    <string name="Operations">Operations</string>
    <string name="Taxes_Applicable">Taxes Applicable</string>
    <string name="Father_Name"><![CDATA[Father Name <font color=\'#cc0029\'>*</font>]]></string>
    <string name="Spouse_Name"><![CDATA[Spouse Name <font color=\'#cc0029\'>*</font>]]></string>
    <string name="Aadhar_Number"><![CDATA[Aadhar Number <font color=\'#cc0029\'>*</font>]]></string>
    <string name="Pan_Number"><![CDATA[PAN Number <font color=\'#cc0029\'>*</font>]]></string>
    <string name="Althernate_Phone"><![CDATA[Alternative Phone <font color=\'#cc0029\'>*</font>]]></string>
    <string name="Gender">Gender</string>
    <string name="update_kyc">Update KYC</string>
    <string name="Add_Kyc">Add KYC</string>
    <string name="you_don_t_h">You don’t have any nominee, please add by tapping on the button below.</string>
    <string name="Add_Nominee">Add Nominee</string>
    <string name="Nominee_Name"><![CDATA[Nominee Name <font color=\'#cc0029\'>*</font>]]></string>
    <string name="Nomine_Mobile_Number"><![CDATA[Nominee Mobile Number <font color=\'#cc0029\'>*</font>]]></string>
    <string name="Relation"><![CDATA[Relation <font color=\'#cc0029\'>*</font>]]></string>
    <string name="Address"> <![CDATA[Address <font color=\'#cc0029\'>*</font>]]></string>
    <string name="City"><![CDATA[City <font color=\'#cc0029\'>*</font>]]></string>
    <string name="Select_State"> Select State</string>
    <string name="Select_Country">Select Country</string>
    <string name="Delete">Delete</string>
    <string name="Edit">Edit</string>
    <string name="Zip_Code"><![CDATA[Zip Code <font color=\'#cc0029\'>*</font>]]></string>
    <string name="add_nickname">Add Nickname</string>
    <string name="Nominee">Nominee</string>
    <string name="Edit_Profile">Edit Profile</string>
    <string name="Bank_Details">Bank Details</string>
    <string name="Personal_Address">Personal Address</string>
    <string name="OrgPersonal_Address">Address</string>
    <string name="KYC">KYC</string>
    <string name="Change_Profile_Picture"><u>Change Profile Picture</u></string>
    <string name="Name"><![CDATA[Name<font color=\'#cc0029\'>*</font>]]></string>
    <string name="Save">Save</string>
    <string name="SetasPrimary">Set as Primary</string>
    <string name="Add_Address">Save Address</string>
    <string name="Add_New_Address">Add New Address</string>
    <string name="Add_bank">Add Bank</string>
    <string name="empty_bank">You don’t have bank details added yet, please add by tapping on the button below.</string>
    <string name="empty_address_content">You don’t have any address saved, please add by tapping on the button below.</string>
    <string name="Select_addresstype"> Select Address Type</string>
    <string name="Account_Number"><![CDATA[Account Number<font color=\'#cc0029\'>*</font>]]></string>
    <string name="Primary">Primary</string>
    <string name="Branch_Name"><![CDATA[Branch Name<font color=\'#cc0029\'>*</font>]]></string>
    <string name="Bank_Name"><![CDATA[Bank Name<font color=\'#cc0029\'>*</font>]]></string>
    <string name="IFSC_Code"><![CDATA[IFSC Code<font color=\'#cc0029\'>*</font>]]></string>
    <string name="Account_Holder_Name"><![CDATA[Account Holder Name<font color=\'#cc0029\'>*</font>]]></string>
    <string name="Face_ID_Login">Face ID Login</string>
    <string name="Notifications">Notifications</string>
    <string name="Invite_Friends">Refer and Earn</string>
    <string name="Support">Support</string>
    <string name="Terms_Conditions">Terms and Conditions</string>
    <string name="App_Lock">App Lock</string>
    <string name="Log_Out">Log Out</string>
    <string name="CIN_No">CIN No</string>
    <string name="Cin_Number">U51909TG2019PLC130903</string>
    <string name="PAN_No">PAN No</string>
    <string name="PANNo">AAHCG7082N</string>
    <string name="TAN_No">TAN No</string>
    <string name="TAN_Number">HYDG18885G</string>
    <string name="GSTIN_No">GSTIN No</string>
    <string name="GSTIN_Number">36AAHCG7082N1ZZ</string>
    <string name="IEC_No">IEC No</string>
    <string name="IEC_Number">AAHCG7082N</string>
    <string name="Udyog_Aadhar_No">Udyog Aadhar No</string>
    <string name="Udyog_Aadhar_Number">TS02E0067316</string>
    <string name="Govt_of_Telangana_Reg_No">Govt of Telangana Reg No</string>
    <string name="Govt_of_Telangana_Reg_Number">SEA/HYD/ALO/03/0199926/2020</string>
    <string name="MMTC_Limited">MMTC Limited</string>
    <string name="Hyderabad">Hyderabad</string>
    <string name="Ahmedabad">Ahmedabad</string>
    <string name="movetocart"><u>Move to Cart</u></string>
    <string name="Hyderbad_code">Gold Code : 10882GL01 <br /> <br /> Silver Code : 108825V01</string>
    <string name="Ahmedabad_code">Gold Code : 10925GL01 <br /> <br /> Silver Code : 109255V01</string>
    <string name="GJEPC_Membership_No">GJEPC Membership No</string>
    <string name="Bureau_of_Indian_Standards">Bureau of Indian Standards</string>
    <string name="Bureau_of_Indian_Standardsnumber">Certificate No : HM/C-6390039720</string>
    <string name="GJEPC_Membership_Number">GJEPC/RO-CHE/700005661/AM/1</string>
    <string name="Registered_Office">Registered Office :</string>
    <string name="Registered_Office_Address"> Goldsikka Limited #3-5-573, Himayatnagar, Hyderabad, Telangana-500029, India.</string>
    <string name="Admin_Office">Corporate Office :</string>
    <string name="Admin_Office_Addrsss">Goldsikka Limited 2ndFloor, Ashoka Raghupathi Chambers, H.No.1-10-60, Adj to Prakash Nagar Metro Station, Begumpet, Hyderabad, Telangana-500016, India. </string>
    <string name="Tech_labs">Jewelry Wholesale Shop :</string>
    <string name="Tech_labs_Address">Goldsikka Limited 1stFloor, #3-5-171/1/2, Narayanguda Near Melkote park, Hyderabad, Telangana-500029, India. </string>
    <string name="Bullion_Retail_Shoppe">Bullion Retail Shop :</string>
    <string name="Bullion_Retail_Shoppe_Address">Shop No.01 HNo 21-6-60, Mehndi Galli, Ghansi Bazar, Charminar, Hyderabad, Telangana-500002, India.</string>
    <string name="designation"><![CDATA[Designation <font color=\'#cc0029\'>*</font>]]></string>
    <string name="message"><![CDATA[Message <font color=\'#cc0029\'>*</font>]]></string>
    <string name="contact_information">Contact Information:</string>
    <string name="full_name"><![CDATA[Full Name <font color=\'#cc0029\'>*</font>]]></string>
    <string name="select_plan">Select Plan</string>
    <string name="WalletGold">Wallet Gold</string>
    <string name="buy_gold">Buy Gold</string>
    <string name="thirtygram">30 gram</string>
    <string name="wallet_gold"> Gold Vault</string>
    <string name="wallet_purchase_gold"> Gold Vault</string>
    <string name="welcome_to_">Welcome to Goldsikka</string>
    <string name="an_easy_and">
An easy and convenient platform to buy, store, sell, gift, and redeem gold
</string>
    <string name="new_to_gold">

New to Goldsikka
</string>
    <string name="already_hav">

Already have an account
</string>
    <string name="by_creating">

By creating account you agree to the
</string>
    <string name="name">Name</string>
    <string-array name="geder">
        <item>Select Geneer</item>
        <item>Male</item>
        <item>FeMale</item>
    </string-array>
    <string name="passbook">

My Transactions
</string>
    <string name="hyderabad_2">

Hyderabad
</string>
    <string name="hyderabad_3">

23 Mar, 2021
</string>
    <string name="gold">

GOLD
</string>
    <string name="tengram">

1 gram
</string>
    <string name="some_id">

 46,325.00
</string>
    <string name="gold_plans">

Gold Plans
</string>
    <string name="my_gold_202">

My GOLD 2021
</string>
    <string name="spp_on_gold">

SPP on gold with easy installments
</string>
    <string name="jewellery_p">

11+1 Jewellery Plan
</string>
    <string name="pm_ist">

3:03 pm IST
</string>
    <string name="gift">

Gift
</string>
    <string name="password"><![CDATA[Password <font color=\'#cc0029\'>*</font>]]></string>
    <string name="redeem">

Redeem
</string>
    <string name="one_month_f">

One month free installment from Goldsikka
</string>
    <string name="view_more_o">

View more offers  >
</string>
    <string name="username_password"><![CDATA[Email or Contact Number <font color=\'#cc0029\'>*</font>]]></string>
</resources>