<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_welcomeimage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/welcome_to_"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/welcome_to_"
            android:textAppearance="@style/welcome_to_"
            android:textColor="@color/white"
            android:textSize="24dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/an_easy_and"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center_horizontal|top"
            android:lineSpacingExtra="3sp"
            android:text="@string/an_easy_and"
            android:textAppearance="@style/an_easy_and"
            android:textColor="@color/white"
            android:textSize="14dp"
            android:translationY="-1.53sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/rectangle_3"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/buttonbackground"
            android:onClick="signup"
            android:text="@string/new_to_gold"
            android:textAppearance="@style/new_to_gold" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_below="@+id/rectangle_3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/buttonbackground_border"
            android:onClick="login"
            android:text="@string/already_hav"
            android:textAppearance="@style/already_hav"
            android:textColor="@color/white" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/buttonbackground_border"
            android:onClick="proceedemoaccount"
            android:text="Proceed to DemoAccount"
            android:textAllCaps="false"
            android:textAppearance="@style/already_hav"
            android:visibility="gone" />


    </LinearLayout>

</RelativeLayout>