<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/white"
        android:gravity="center"
        android:textAlignment="center"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        app:titleTextColor="@color/DarkBrown">

    </androidx.appcompat.widget.Toolbar>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/LightBrown2" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/btn_aboutgoldsikka"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="24dp"
                android:drawableEnd="@drawable/rightarrow"
                android:drawableTint="@color/DarkBrown"
                android:text="@string/About_Gold_Sikka"
                android:textColor="@color/DarkBrown"
                android:textSize="14dp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="24dp"
                android:background="@color/LightBrown2" />

            <TextView
                android:id="@+id/btn_registration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="24dp"
                android:drawableEnd="@drawable/rightarrow"
                android:drawableTint="@color/DarkBrown"
                android:text="@string/Registration"
                android:textColor="@color/DarkBrown"
                android:textSize="14dp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="24dp"
                android:background="@color/LightBrown2" />

            <TextView
                android:id="@+id/btn_operations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="24dp"
                android:drawableEnd="@drawable/rightarrow"
                android:drawableTint="@color/DarkBrown"
                android:text="@string/Operations"
                android:textColor="@color/DarkBrown"
                android:textSize="14dp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="24dp"
                android:background="@color/LightBrown2" />

            <TextView
                android:id="@+id/btn_taxesapplicable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="24dp"
                android:drawableEnd="@drawable/rightarrow"
                android:drawableTint="@color/DarkBrown"
                android:text="@string/Taxes_Applicable"
                android:textColor="@color/DarkBrown"
                android:textSize="14dp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="24dp"
                android:background="@color/LightBrown2" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>